--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <strong>Tel:</strong> 123-456-7890<br>
         <strong>Email:</strong> no_reply@example.com<br>
      </em>
-     20 January 2016<br>
+     <br>
+     20 January 2016
     </header>
-    <br>
-
+      
 <em>
 <strong>Miss Eileen Dover<br></strong>
 4321 Cliff Top Edge<br>
@@ -28,33 +28,73 @@ UK<br>
 <br>
 
 <h3>Re: Eileen Dover university application</h3>
-Dear Eileen,
-Thank you for your recent application to join us at the University of Awesome’s science faculty to study as part of your PhD next year. I will answer your questions one by one, in the following sections.
-<section><p><h2>Starting dates</h2></p>
-We are happy to accomodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:
-First semester: 9 September 2016
-Second semester: 15 January 2017
-Third semester 2 May 2017
-Please let me know if this is ok. and if so which start date you would prefer.
-You can find more information about important university dates on our website.</section>
-Subjects of study
-At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:
-Turning H2O into wine, and the health benefits of Rcsveratrol (C14H12O3.)
-Measuring the effect on performance of funk bassplaycrs at tcmpraturcs exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 x 103 > 3 x 104.)
-HTML and CSS constructs for representing musical scores.
-So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
-Exotic dance moves
-Yes, you are right! As part of my post-doctorate work. I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:
-Polynesian chicken dance
-A little known but very influential dance dating back as far as 300BC. a whole village would dance around in a circle like chickens, to encourage their livestock or be "fruitful*.
-Icelandic brownian shuffle
-Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in impcrccptably tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modem styles such as Twerking.
-Arctic robot dance
-An interesting example of historic misinformation. English explorers in the 1960s believed to have discovered a new dance style characterised by "robotic*, stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.
-For more of my research, see my exotic dance research page.
-Yours sincerely.
+<p>Dear Eileen,</p>
+<p>
+Thank you for your recent application to join us at the University of Awesome’s science faculty to study as part<br> of your <abbr title="Doctor of Philosophy">PhD</abbr> next year. I will answer your questions one by one, in the following sections.<p>
+<section><p><h2 id="fechasimportantes">Starting dates</h2></p>
+We are happy to accomodate you starting your study with us at any time, however it would suit us better if you<br>
+could start at the beginning of a semester; the start dates for each one are as follows:<br>
+<ul>
+<li>First semester: 9 September 2016</li>
+<li>Second semester: 15 January 2017</li>
+<li>Third semester 2 May 2017</li>
+</ul>
+Please let me know if this is ok. and if so which start date you would prefer.<br>
+<br>
+You can find more information about <a href="#fechasimportantes">important university dates</a> on our website.</section>
+
+
+<section><h3>Subjects of study</h3>
+<p>
+At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall<br>
+somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just<br>
+the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
+<ol>
+<li>Turning H2O into wine, and the health benefits of Rcsveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
+<li>Measuring the effect on performance of funk bassplaycrs at tcmpraturcs exceeding 30°C (86°F), when the<br>
+audience size exponentially increases (effect of 3 x 10<sup>3</sup> > 3 x 10<sup>4</sup>.)</li>
+<li>HTML and CSS constructs for representing musical scores.</li>
+</ol>
+<p>
+So please can you provide more information on each of these subjects, including how long you'd expect the
+research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
+</p>
+</section>
+
+<section><h3 id="bailesexoticos">Exotic dance moves</h3>
+<p>
+    Yes, you are right! As part of my post-doctorate work. I <em>did</em> study exotic tribal dances. To answer your question,<br>
+ my favourite dances are as follows, with definitions:
+ </p>
+ <dl>
+    <dt>Polynesian chicken dance</dt>
+    <dd>
+        A little known but <em>very</em> influential dance dating back as far as 300BC. a whole village would dance around <br>
+        in a circle like chickens, to encourage their livestock or be "fruitful*.</dd>
+        
+    <dt>Icelandic brownian shuffle</dt>    
+<dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved<br>
+    huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly<br>
+    tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired<br>
+    modem styles such as Twerking.</dd>
+    <dt>Arctic robot dance</dt>
+    <dd>
+    An interesting example of historic misinformation. English explorers in the 1960s believed to have<br>
+    discovered a new dance style characterised by "robotic*, stilted movements, being practiced by inhabitants<br>
+    of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this<br>
+    because they were really cold.
+    </dd>
+</dl>
+
+<p>
+For more of my research, see my <a href="#bailesexoticos">exotic dance research page.</a></section>
+</p>
+
+<p>Yours sincerely.</p>
 <footer><p>Dr Eleanor Gaye</p>
-    <p>University of Awesome motto: “Be excellent to each other.” - Bill S Preston. Esq</p>
+    <p>
+        University of Awesome motto: <em>“Be excellent to each other.”</em> -- <cite>The memoirs of Bill S Preston. Esq </cite>
+    </p>
 </footer>
 
 </body>
