--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <strong>Email:</strong> no_reply@example.com<br>
      </em>
      <br>
+     <p>
      20 January 2016
+     </p>
+
     </header>
       
 <em>
@@ -27,22 +30,28 @@ UK<br>
 </em>
 <br>
 
-<h3>Re: Eileen Dover university application</h3>
+<h2>Re: Eileen Dover university application</h2>
 <p>Dear Eileen,</p>
 <p>
 Thank you for your recent application to join us at the University of Awesome’s science faculty to study as part<br> of your <abbr title="Doctor of Philosophy">PhD</abbr> next year. I will answer your questions one by one, in the following sections.<p>
-<section><p><h2 id="fechasimportantes">Starting dates</h2></p>
+
+    <section><p><h3 id="fechasimportantes">Starting dates</h3></p>
+<p>
 We are happy to accomodate you starting your study with us at any time, however it would suit us better if you<br>
 could start at the beginning of a semester; the start dates for each one are as follows:<br>
+</p>
 <ul>
-<li>First semester: 9 September 2016</li>
-<li>Second semester: 15 January 2017</li>
-<li>Third semester 2 May 2017</li>
+    <li>First semester: 9 September 2016</li>
+    <li>Second semester: 15 January 2017</li>
+    <li>Third semester 2 May 2017</li>
 </ul>
-Please let me know if this is ok. and if so which start date you would prefer.<br>
-<br>
-You can find more information about <a href="#fechasimportantes">important university dates</a> on our website.</section>
+<p>
+    Please let me know if this is ok. and if so which start date you would prefer.<br>
+</p>
 
+<p>
+You can find more information about <a href="#fechasimportantes">important university dates</a> on our website.</section>
+</p>
 
 <section><h3>Subjects of study</h3>
 <p>
@@ -53,7 +62,7 @@ the kind of person we'd like to have on our team. Saying that, of the ideas you 
 <li>Turning H2O into wine, and the health benefits of Rcsveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
 <li>Measuring the effect on performance of funk bassplaycrs at tcmpraturcs exceeding 30°C (86°F), when the<br>
 audience size exponentially increases (effect of 3 x 10<sup>3</sup> > 3 x 10<sup>4</sup>.)</li>
-<li>HTML and CSS constructs for representing musical scores.</li>
+<li><abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
 </ol>
 <p>
 So please can you provide more information on each of these subjects, including how long you'd expect the
@@ -93,7 +102,7 @@ For more of my research, see my <a href="#bailesexoticos">exotic dance research 
 <p>Yours sincerely.</p>
 <footer><p>Dr Eleanor Gaye</p>
     <p>
-        University of Awesome motto: <em>“Be excellent to each other.”</em> -- <cite>The memoirs of Bill S Preston. Esq </cite>
+        University of Awesome motto: “Be awesome to each other.” -- <cite>The memoirs of Bill S Preston. Esq </cite>
     </p>
 </footer>
 
