--- a/index.html
+++ b/index.html
@@ -1,84 +1,100 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Práctica 1 - dar formato a la carta</title>
 </head>
 <body>
-    <header>
-        <em>
+    <p>
+        <i>
         <strong>Dr. Eleanor Gaye</strong><br>
         Awesome Science faculty<br> 
         University of Awesome<br> 
         Bobtown. CA 99999.<br>
         USA<br>
-        <strong>Tel:</strong> 123-456-7890<br>
-        <strong>Email:</strong> no_reply@example.com<br>
-     </em>
+        <b>Tel:</b> 123-456-7890<br>
+        <b>Email:</b> no_reply@example.com<br>
+        </i>
      <br>
      <p>
-     20 January 2016
+     <time datatime="2016-01-20">20 January 2016</time>
      </p>
 
-    </header>
-      
-<em>
+    </p>
+ 
+
+<p>
+<i>
 <strong>Miss Eileen Dover<br></strong>
 4321 Cliff Top Edge<br>
 Dover. CT9 XXX<br>
 UK<br>
-</em>
-<br>
+</i>
+</p>
 
-<h2>Re: Eileen Dover university application</h2>
-<p>Dear Eileen,</p>
+
+<h1>
+    Re: Eileen Dover university application
+</h1>
+
 <p>
-Thank you for your recent application to join us at the University of Awesome’s science faculty to study as part<br> of your <abbr title="Doctor of Philosophy">PhD</abbr> next year. I will answer your questions one by one, in the following sections.<p>
+    Dear Eileen,
+</p>
 
-    <section><p><h3 id="fechasimportantes">Starting dates</h3></p>
+<p>
+Thank you for your recent application to join us at the University of Awesome’s science faculty to study as part<br>
+of your <abbr title="Doctor of Philosophy">PhD</abbr> next year. I will answer your questions one by one, in the following sections.
+</p>
+
+    <h2 id="fechasimportantes">Starting dates</h2>
 <p>
 We are happy to accomodate you starting your study with us at any time, however it would suit us better if you<br>
 could start at the beginning of a semester; the start dates for each one are as follows:<br>
 </p>
+
 <ul>
-    <li>First semester: 9 September 2016</li>
-    <li>Second semester: 15 January 2017</li>
-    <li>Third semester 2 May 2017</li>
+    <li>First semester: <time= datatime="2016-09-09">9 September 2016</time></li>
+    <li>Second semester: <time= datatime="2017-01-15">15 January 2017</time></li>
+    <li>Third semester: <time= datatime="2017-05-02">2 May 2017</time></li>
 </ul>
+
 <p>
-    Please let me know if this is ok. and if so which start date you would prefer.<br>
+    Please let me know if this is ok. and if so which start date you would prefer.
 </p>
 
 <p>
-You can find more information about <a href="#fechasimportantes">important university dates</a> on our website.</section>
+You can find more information about <a href="#fechasimportantes">important university dates</a> on our website.
 </p>
 
-<section><h3>Subjects of study</h3>
+<h2>Subjects of study</h2>
 <p>
 At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall<br>
 somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just<br>
-the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
+the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:
+</p>
+
 <ol>
-<li>Turning H2O into wine, and the health benefits of Rcsveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
-<li>Measuring the effect on performance of funk bassplaycrs at tcmpraturcs exceeding 30°C (86°F), when the<br>
+<li>Turning H<sub>2</sub>O into wine, and the health benefits of Rcsveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
+<li>Measuring the effect on performance of funk bassplaycrs at tcmpraturcs exceeding 30<sup>°</sup>C (86<sup>°</sup>F), when the<br>
 audience size exponentially increases (effect of 3 x 10<sup>3</sup> > 3 x 10<sup>4</sup>.)</li>
 <li><abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
 </ol>
+
 <p>
 So please can you provide more information on each of these subjects, including how long you'd expect the
 research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
 </p>
-</section>
 
-<section><h3 id="bailesexoticos">Exotic dance moves</h3>
+<h2 id="bailesexoticos">Exotic dance moves</h2>
 <p>
-    Yes, you are right! As part of my post-doctorate work. I <em>did</em> study exotic tribal dances. To answer your question,<br>
+    Yes, you are right! As part of my post-doctorate work. I <i>did</i> study exotic tribal dances. To answer your question,<br>
  my favourite dances are as follows, with definitions:
  </p>
  <dl>
     <dt>Polynesian chicken dance</dt>
     <dd>
-        A little known but <em>very</em> influential dance dating back as far as 300BC. a whole village would dance around <br>
+        A little known but <i>very</i> influential dance dating back as far as 300BC. a whole village would dance around <br>
         in a circle like chickens, to encourage their livestock or be "fruitful*.</dd>
         
     <dt>Icelandic brownian shuffle</dt>    
@@ -96,7 +112,7 @@ research to take, required staff and other resources, and anything else you thin
 </dl>
 
 <p>
-For more of my research, see my <a href="#bailesexoticos">exotic dance research page.</a></section>
+For more of my research, see my <a href="#bailesexoticos">exotic dance research page.</a>
 </p>
 
 <p>Yours sincerely.</p>
